--- a/Frontends/MovieApi.WebUI/MovieApi.WebUI.csproj
+++ b/Frontends/MovieApi.WebUI/MovieApi.WebUI.csproj
@@ -15,8 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Admin\Controllers\" />
-    <Folder Include="Areas\Admin\Views\AdminMovie\" />
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
   </ItemGroup>
 
 </Project>
